--- a/corehq/apps/app_manager/static/app_manager/template_apps/health/app.json
+++ b/corehq/apps/app_manager/static/app_manager/template_apps/health/app.json
@@ -293,7 +293,9 @@
               }
             },
             "open_case": {
-              "name_path": "/data/patient_name",
+              "name_update": {
+                "question_path": "/data/patient_name"
+              },
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -771,7 +773,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -972,7 +974,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -1597,7 +1599,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
