--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -83,4 +83,5 @@ branches:
     - dmr/add-support-for-ses-django-email-backend  # Danny Aug 26
     - cs/SC-2135-hourly-reports-not-respecting-timezones # Charl 1 Sept
     - ad/fix-conditional-alerts-page-timeout # Addison Sep 1
+    - do/migrate-apps # Dominic Sep 2
 submodules: { }
