--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -84,4 +84,5 @@ branches:
     - cs/SC-2135-hourly-reports-not-respecting-timezones # Charl 1 Sept
     - ad/fix-conditional-alerts-page-timeout # Addison Sep 1
     - do/migrate-apps # Dominic Sep 2
+    - akj/abdm-api # Akash Sep 5
 submodules: { }
