--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -85,4 +85,5 @@ branches:
     - ad/fix-conditional-alerts-page-timeout # Addison Sep 1
     - do/migrate-apps # Dominic Sep 2
     - akj/abdm-api # Akash Sep 5
+    - jm/userrole-audit  # Joel Sep 6
 submodules: { }
