--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -86,4 +86,5 @@ branches:
     - do/migrate-apps # Dominic Sep 2
     - akj/abdm-api # Akash Sep 5
     - jm/userrole-audit  # Joel Sep 6
+    - bmb/okta-idp  # Biyeun Sep 7
 submodules: { }
