--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -535,6 +535,8 @@ xlwt==1.3.0
     # via -r base-requirements.in
 xmlsec==1.3.12
     # via python3-saml
+zipp==3.7.0
+    # via importlib-metadata
 zope-event==4.5.0
     # via gevent
 zope-interface==5.4.0
