--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -88,4 +88,5 @@ branches:
     - bmb/okta-idp  # Biyeun Sep 7
     - ad/embed-tab-report-by-user # Addison Sep 7
     - akj/ucr-copy-npi # Akash Sep 8
+    - dependabot/pip/requirements/sentry-sdk-1.9.0 # Graham Sep 8
 submodules: { }
