--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -61,7 +61,7 @@ branches:
     - mjr/all_safe_fixes  # Matt May 11
     # - bmb/sso/api/test-001  # Biyeun June 15
     - mjr/erm-overwrite # Matt June 24
-    - gh/upgrade-twilio # Graham July 8
+    # - gh/upgrade-twilio # Graham July 8
    # - rp/fix-case-properties-modal-styling # Rynhard 20 July
     - mjr/report-logging+celery-upgrade-patch # Matt July 20
     - mjr/report-logging-verification # Matt July 20
