--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -53,7 +53,7 @@ branches:
     # see https://confluence.dimagi.com/display/GTD/Deploy+Process#DeployProcess-vellum
     - vellum-staging  # DO NOT REMOVE this is similar to "autostaging", but for vellum
     # - nemanja1040:infobip_fallback_backend  # Nemanja Stancic Jul 29
-    - sr/es-alias # Sravan Nov 18
+    # - sr/es-alias # Sravan Nov 18
     - ce/bulk-case-search # Cal July 6
     # - sr/memoized-toggle # Sravan July 26
     # - dependabot/pip/requirements/certifi-2021.10.8   # SK / Joel Oct 12
