--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -84,4 +84,5 @@ branches:
     - ad/embed-tab-report-by-user # Addison Sep 7
     - ap/remove-celery-monkey-patching # Amit Sep 11
     - dependabot/pip/requirements/django-otp-1.1.3 # Graham Sep 12
+    - sk/webapps-update-url # Simon Sep 13
 submodules: { }
