Added app setting

--- a/corehq/apps/app_manager/static/app_manager/json/commcare-settings-layout.yml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-settings-layout.yml
@@ -87,6 +87,7 @@
     - hq.translation_strategy
     - hq.mobile_ucr_restore_version
     - hq.location_fixture_restore
+    - properties.cc-selected-functions-csv
 
 - title: 'Disabled'
   id: app-settings-disabled
