--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -79,4 +79,5 @@ branches:
     - sk/webapps-update-url # Simon Sep 13
     - ap/sql-repeater/phase-2 # Amit Sep 16
     - es/dd-case-data  # Ethan Sep 19
+    - smh/remove-setSelectedValue-import # Steph Sept 20
 submodules: { }
