--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -80,4 +80,5 @@ branches:
     - ap/sql-repeater/phase-2 # Amit Sep 16
     - es/dd-case-data  # Ethan Sep 19
     - smh/remove-setSelectedValue-import # Steph Sept 20
+    - rc/update-case-search-settings-mapping # Robert Sept 20
 submodules: { }
