--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -63,15 +63,15 @@ branches:
     - mjr/report-logging-verification # Matt July 20
     - dm/sql-lookup-tables-pr1  # Daniel July 21
     - ml/limit-superuser-changes # Minha July 25
-    - dependabot/npm_and_yarn/leaflet-1.8.0  # Biyeun Aug 17 (impacts maps)
+    # - dependabot/npm_and_yarn/leaflet-1.8.0  # Biyeun Aug 17 (impacts maps)
     - bmb/pyopenssl-upgrade-22.0.0  # Biyeun Aug 22 (impacts SSO)
     # - ad/remove-entered-wrap-functions # Addison Aug 22
     - ce/api-rate-limits # Cal Aug 23
     - dmr/add-support-for-ses-django-email-backend  # Danny Aug 26
     - cs/SC-2135-hourly-reports-not-respecting-timezones # Charl 1 Sept
     - do/migrate-apps # Dominic Sep 2
-    - akj/abdm-api # Akash Sep 5
-    - sk/webapps-update-url # Simon Sep 13
+    # - akj/abdm-api # Akash Sep 5
+    # - sk/webapps-update-url # Simon Sep 13
     - ap/sql-repeater/phase-2 # Amit Sep 16
     - smh/remove-setSelectedValue-import # Steph Sept 20
     - rc/update-case-search-settings-mapping # Robert Sept 20
