--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -75,8 +75,8 @@ branches:
     - smh/remove-setSelectedValue-import # Steph Sept 20
     - rc/update-case-search-settings-mapping # Robert Sept 20
     - rp/mobile-worker-validation # Rynhard Sept 21
-    - jt/ush-2147_improve_print_css #Jonathan T. Sept 22
-    - mp/mobile_fix-2fa # Marco Sep 26
+    # - jt/ush-2147_improve_print_css #Jonathan T. Sept 22
+    # - mp/mobile_fix-2fa # Marco Sep 26
     - dm/sql-lookup-tables-pr2 # Daniel Sept 27
     - jls/new-instance-connectors # Jenny Sept 27
     - akj/abdm-api-for-mobile-app # Akash Sep 28
