--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -62,7 +62,6 @@ branches:
     - bmb/sso/api/test-001  # Biyeun June 15
     - mjr/report-logging-verification # Matt July 20
     - ml/limit-superuser-changes # Minha July 25
-    # - dependabot/npm_and_yarn/leaflet-1.8.0  # Biyeun Aug 17 (impacts maps)
     - bmb/pyopenssl-upgrade-22.0.0  # Biyeun Aug 22 (impacts SSO)
     # - ad/remove-entered-wrap-functions # Addison Aug 22
     - ce/api-rate-limits # Cal Aug 23
@@ -80,4 +79,5 @@ branches:
     - dm/sql-lookup-tables-pr2 # Daniel Sept 27
     - jls/new-instance-connectors # Jenny Sept 27
     - akj/abdm-api-for-mobile-app # Akash Sep 28
+    - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
 submodules: { }
