--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -80,4 +80,5 @@ branches:
     - jls/new-instance-connectors # Jenny Sept 27
     - akj/abdm-api-for-mobile-app # Akash Sep 28
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
+    - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
 submodules: { }
