--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -81,4 +81,5 @@ branches:
     - akj/abdm-api-for-mobile-app # Akash Sep 28
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
     - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
+    - gh/replace-base-crud-view # Graham Sep 29
 submodules: { }
