--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -78,6 +78,7 @@ branches:
     # - mp/mobile_fix-2fa # Marco Sep 26
     - dm/sql-lookup-tables-pr2 # Daniel Sept 27
     - jls/new-instance-connectors # Jenny Sept 27
+    - jls/cloudcare-drop-datatables # Jenny Sept 29
     - akj/abdm-api-for-mobile-app # Akash Sep 28
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
     - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
