--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -82,4 +82,5 @@ branches:
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
     - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
     - gh/replace-base-crud-view # Graham Sep 29
+    - jls/standardize-web-apps-js-imports # Jenny Oct 3
 submodules: { }
