--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -83,4 +83,5 @@ branches:
     - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
     - gh/replace-base-crud-view # Graham Sep 29
     - jls/standardize-web-apps-js-imports # Jenny Oct 3
+    - akj/release-mode-toggle # Akash 7 Oct
 submodules: { }
