--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -84,4 +84,5 @@ branches:
     - gh/replace-base-crud-view # Graham Sep 29
     - jls/standardize-web-apps-js-imports # Jenny Oct 3
     - akj/release-mode-toggle # Akash 7 Oct
+    - smh/multi-select-selection-update # Steph Oct 10
 submodules: { }
