--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -81,7 +81,7 @@ branches:
     - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
     - gh/replace-base-crud-view # Graham Sep 29
     - jls/standardize-web-apps-js-imports # Jenny Oct 3
-    - akj/release-mode-toggle # Akash 7 Oct
+    #- akj/release-mode-toggle # Akash 7 Oct
     - akj/migrations-fix # Akash Oct 11
     - jls/multi-select-flag-handling # Jenny Oct 11
 submodules: { }
