--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,8 @@
-FROM dimagi/commcarehq_base:latest
+FROM kaapstorm/commcarehq_incl:latest
 
-VOLUME /mnt/commcare-hq-ro /mnt/lib
-RUN ln -s /mnt/commcare-hq-ro/docker/run.sh /mnt/run.sh && \
-    ln -s /mnt/commcare-hq-ro/docker/wait.sh /mnt/wait.sh && \
+VOLUME /mnt/lib
+RUN ln -s /vendor/docker/run.sh /mnt/run.sh && \
+    ln -s /vendor/docker/wait.sh /mnt/wait.sh && \
     groupadd -r cchq && useradd -r -g cchq cchq
 
 ENTRYPOINT ["/mnt/run.sh"]
