--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -82,5 +82,5 @@ branches:
     - akj/release-mode-toggle # Akash 7 Oct
     - akj/migrations-fix # Akash Oct 11
     - jls/standardize-web-apps-js-imports # Jenny Oct 3
-    #- jls/multi-select-flag-handling # Jenny Oct 11
+    - jls/multi-select-flag-handling # Jenny Oct 11
 submodules: { }
