--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -73,7 +73,6 @@ branches:
     - rp/mobile-worker-validation # Rynhard Sept 21
     # - jt/ush-2147_improve_print_css #Jonathan T. Sept 22
     # - mp/mobile_fix-2fa # Marco Sep 26
-    - dm/sql-lookup-tables-pr2 # Daniel Sept 27
     - jls/new-instance-connectors # Jenny Sept 27
     - akj/abdm-api-for-mobile-app # Akash Sep 28
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
@@ -84,4 +83,7 @@ branches:
     - jls/standardize-web-apps-js-imports+jls/multi-select-flag-handling
     - jls/standardize-web-apps-js-imports # Jenny Oct 3
     - jls/multi-select-flag-handling # Jenny Oct 11
+    - dm/sql-lookup-tables-pr2+ml/lookup-table-improvements # Minha Oct 17
+    - dm/sql-lookup-tables-pr2 # Daniel Sept 27
+    - ml/lookup-table-improvements # Minha Oct 17
 submodules: { }
