--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -71,7 +71,6 @@ branches:
     - smh/remove-setSelectedValue-import # Steph Sept 20
     - rc/update-case-search-settings-mapping # Robert Sept 20
     - rp/mobile-worker-validation # Rynhard Sept 21
-    # - jt/ush-2147_improve_print_css #Jonathan T. Sept 22
     # - mp/mobile_fix-2fa # Marco Sep 26
     - jls/new-instance-connectors # Jenny Sept 27
     - akj/abdm-api-for-mobile-app # Akash Sep 28
@@ -86,4 +85,5 @@ branches:
     - dm/sql-lookup-tables-pr2+ml/lookup-table-improvements # Minha Oct 17
     - dm/sql-lookup-tables-pr2 # Daniel Sept 27
     - ml/lookup-table-improvements # Minha Oct 17
+    - jt/ush-2427 # Jonathan T. Oct 18
 submodules: { }
