--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -76,7 +76,7 @@ branches:
     - akj/abdm-api-for-mobile-app # Akash Sep 28
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC)
     - bmb/remove-oidc-dev-notice  # Biyeun Sep 29
-    # - gh/replace-base-crud-view # Graham Sep 29
+    - gh/replace-base-crud-view # Graham Sep 29
     - akj/release-mode-toggle # Akash 7 Oct
     - akj/migrations-fix # Akash Oct 11
     - jls/standardize-web-apps-js-imports+jls/multi-select-flag-handling+jt/ush-2427
