--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
         "mem": "^4.0.0",
         "minimist": "^1.2.6",
         "minimatch": "^3.0.2",
+        "moment-timezone": "^0.5.35",
         "normalize-url": "^4.5.1",
         "set-value": "^4.0.1",
         "ssri": "^8.0.1",
