--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -83,4 +83,5 @@ branches:
     - jls/standardize-web-apps-js-imports # Jenny Oct 3
     - jls/multi-select-flag-handling # Jenny Oct 11
     - jt/ush-2427 # Jonathan T. Oct 18
+    - dm/moment-timezone # Daniel Oct 19
 submodules: { }
