--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -84,4 +84,5 @@ branches:
     - jt/ush-2427 # Jonathan T. Oct 18
     - dm/moment-timezone # Daniel Oct 19
     - ce/api-rate-limits # Cal Oct 19
+    - ml/lookup-table-UI # Minha Oct 19
 submodules: { }
