--- a/docker/hq-compose.yml
+++ b/docker/hq-compose.yml
@@ -117,13 +117,16 @@ services:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-zookeeper:}/opt/zookeeper-3.7/data
 
   kafka:
-      image: ubuntu/kafka:3.1-22.04_edge
+      image: confluentinc/cp-kafka:7.2.2
       ports:
         - "9092:9092"
       environment:
           KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
           KAFKA_BROKER_ID: 1
-          KAFKA_ADVERTISED_PORT: 9092
+          KAFKA_INTER_BROKER_LISTENER_NAME: HQ_KAFKA
+          KAFKA_LISTENERS: HQ_KAFKA://0.0.0.0:9092
+          KAFKA_ADVERTISED_LISTENERS: HQ_KAFKA://localhost:9092
+          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: HQ_KAFKA:PLAINTEXT
           CUSTOM_INIT_SCRIPT: |
             URL="https://raw.githubusercontent.com/vishnubob/wait-for-it/c096cface5fbd9f2d6b037391dfecae6fde1362e/wait-for-it.sh"
             if curl --max-time 10 $$URL > wait.sh ; then
@@ -133,7 +136,6 @@ services:
               echo "Wait script download failed"
             fi
           KAFKA_ADVERTISED_HOST_NAME: "kafka"
-          ALLOW_PLAINTEXT_LISTENER: "yes"
       volumes:
         - ${DOCKER_SOCK}:${DOCKER_SOCK}
         - ${VOLUME_PREFIX}${BLANK_IF_TESTS-kafka:}/kafka/kafka-logs-1
