--- a/docker/hq-compose.yml
+++ b/docker/hq-compose.yml
@@ -90,7 +90,9 @@ services:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-redis:}/data
 
   elasticsearch2:
-    image: elasticsearch:2.4.6
+    build:
+      context: .
+      dockerfile: ./files/Dockerfile.es.2
     environment:
       ES_JAVA_OPTS: "-Des.script.engine.groovy.inline.aggs=true -Des.script.engine.groovy.inline.search=true"
     expose:
@@ -100,7 +102,9 @@ services:
       - ./files/elasticsearch_2.yml:/usr/share/elasticsearch/config/elasticsearch.yml:rw
 
   elasticsearch5:
-    image: elasticsearch:5.6.16
+    build:
+      context: .
+      dockerfile: ./files/Dockerfile.es.5
     environment:
       ES_JAVA_OPTS: "-Xms750m -Xmx750m -Des.script.engine.groovy.inline.aggs=true -Des.script.engine.groovy.inline.search=true"
     expose:
