--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -72,10 +72,10 @@ branches:
     #- jls/new-instance-connectors # Jenny Sept 27
     - akj/abdm-api-for-mobile-app # Akash Sep 28
     - dependabot/pip/requirements/jwcrypto-1.4  # Biyeun Sep 28 (OIDC) in QA
-    # - gh/replace-base-crud-view # Graham Sep 29
+    - gh/replace-base-crud-view # Graham Sep 29
     - akj/release-mode-toggle # Akash 7 Oct
     - akj/migrations-fix # Akash Oct 11
     - ml/lookup-table-UI # Minha Oct 19
-    # - gh/add-history-tab # Graham Oct 20
+    - gh/add-history-tab # Graham Oct 20
     - ad/tableau-connected-app # Addison Oct 26
 submodules: { }
