updating files: scripts/staging.yml
[ci skip]

--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -78,4 +78,5 @@ branches:
     - ml/lookup-table-UI # Minha Oct 19
     - gh/add-history-tab # Graham Oct 20
     - ad/tableau-connected-app # Addison Oct 26
+    - cs/SC-2350_disable-ucr-location-auto-drilldown # Charl Oct 27
 submodules: { }
