--- a/docker/hq-compose.yml
+++ b/docker/hq-compose.yml
@@ -65,6 +65,7 @@ services:
       POSTGRES_PASSWORD: commcarehq
     expose:
       - "5432"
+    # No healthcheck: Polling the port causes "incomplete startup packet"
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-postgresql:}/var/lib/postgresql/data
 
@@ -79,6 +80,10 @@ services:
         hard: 1048576
     expose:
       - "5984"
+    healthcheck:
+      test: bash -c 'exec 6<>/dev/tcp/couch/5984'
+      interval: 10s
+      retries: 10
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-couchdb2:}/usr/src/couchdb/dev/lib/node1/data
 
@@ -86,6 +91,10 @@ services:
     image: redis:6.2
     expose:
       - "6379"
+    healthcheck:
+      test: bash -c 'exec 6<>/dev/tcp/redis/6379'
+      interval: 10s
+      retries: 10
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-redis:}/data
 
@@ -97,6 +106,10 @@ services:
       ES_JAVA_OPTS: "-Des.script.engine.groovy.inline.aggs=true -Des.script.engine.groovy.inline.search=true"
     expose:
       - "9200"
+    healthcheck:
+      test: bash -c 'exec 6<>/dev/tcp/elasticsearch2/9200'
+      interval: 10s
+      retries: 10
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-elasticsearch2:}/usr/share/elasticsearch/data
       - ./files/elasticsearch_2.yml:/usr/share/elasticsearch/config/elasticsearch.yml:rw
@@ -109,6 +122,10 @@ services:
       ES_JAVA_OPTS: "-Xms750m -Xmx750m -Des.script.engine.groovy.inline.aggs=true -Des.script.engine.groovy.inline.search=true"
     expose:
       - "9200"
+    healthcheck:
+      test: bash -c 'exec 6<>/dev/tcp/elasticsearch5/9200'
+      interval: 10s
+      retries: 10
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-elasticsearch5:}/usr/share/elasticsearch/data
       - ./files/elasticsearch_5.yml:/usr/share/elasticsearch/config/elasticsearch.yml:rw
@@ -117,6 +134,12 @@ services:
     image: zookeeper:3.7
     expose:
       - "2181"
+    # No healthcheck:
+    #   * Polling the port causes "EndOfStreamException: Unable to read
+    #     additional data from client, it probably closed the socket"
+    #   * Using the "ruok" command returns "ruok is not executed because it is
+    #     not in the whitelist."
+    #     See https://zookeeper.apache.org/doc/r3.7.1/zookeeperAdmin.html#sc_4lw
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-zookeeper:}/opt/zookeeper-3.7/data
 
@@ -139,6 +162,10 @@ services:
         else
           echo "Wait script download failed"
         fi
+    healthcheck:
+      test: bash -c 'exec 6<>/dev/tcp/kafka/9092'
+      interval: 10s
+      retries: 10
     volumes:
       - ${DOCKER_SOCK}:${DOCKER_SOCK}
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-kafka:}/kafka/kafka-logs-1
@@ -148,6 +175,10 @@ services:
     command: server --address :9980 /data
     expose:
       - "9980"
+    healthcheck:
+      test: nc -z minio 9980
+      interval: 10s
+      retries: 10
     volumes:
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-minio-conf:}/root/.minio
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-minio-data:}/data
