--- a/docker/hq-compose.yml
+++ b/docker/hq-compose.yml
@@ -9,7 +9,6 @@ services:
       CODECOV_TOKEN: "${CODECOV_TOKEN}"
       DATADOG_API_KEY: "${DATADOG_API_KEY}"
       DATADOG_APP_KEY: "${DATADOG_APP_KEY}"
-      DEPENDENT_SERVICES: "couch:5984 postgres:5432 redis:6379 elasticsearch2:9200 minio:9980 kafka:9092"
       DOCKER_HQ_OVERLAY: "${DOCKER_HQ_OVERLAY}"
       DOCKER_HQ_OVERLAYFS_CHMOD: "${DOCKER_HQ_OVERLAYFS_CHMOD}"
       DOCKER_HQ_OVERLAYFS_METACOPY: "${DOCKER_HQ_OVERLAYFS_METACOPY}"
@@ -33,13 +32,20 @@ services:
       TRAVIS_REPO_SLUG: "${TRAVIS_REPO_SLUG}"
     privileged: true  # allows mount inside container
     depends_on:
-      - postgres
-      - couch
-      - redis
-      - elasticsearch2
-      - kafka
-      - zookeeper
-      - minio
+      postgres:
+        condition: service_started
+      couch:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      elasticsearch2:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      zookeeper:
+        condition: service_started
+      minio:
+        condition: service_healthy
     volumes:
       - ..:/mnt/commcare-hq-ro${RO}
       - ${VOLUME_PREFIX}${BLANK_IF_TESTS-lib:}/mnt/lib
