--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -78,4 +78,5 @@ branches:
     - ad/tableau-connected-app # Addison Oct 26
     - cs/SC-2350_disable-ucr-location-auto-drilldown # Charl Oct 27
     - em/case-search-checkbox # Evan Oct 27
+    - cs/sc-2369/shadow_module_fix # Chris Oct 31
 submodules: { }
