--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -79,4 +79,5 @@ branches:
     - cs/SC-2350_disable-ucr-location-auto-drilldown # Charl Oct 27
     - em/case-search-checkbox # Evan Oct 27
     - cs/sc-2369/shadow_module_fix # Chris Oct 31
+    - mk/support-expanded-cols-in-mobile-ucr-2 # MK Oct 31
 submodules: { }
