--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -83,4 +83,5 @@ branches:
     - smh/auto-select-app-config # Steph Nov 2
     - smh/auto-select-xml # Steph Nov 2
     - jt/ush-2369 # Jonathan T. Nov 2
+    - ml/submission-api-datadog-metric # Minha Nov 3
 submodules: { }
